# llm-typo-benchmark

./: .gitignore  README.md  pyproject.toml
scripts/: count_data_length.py  generate_predicted_texts.py  main_bench.py  unicode_normalize.py
scripts/preprocess/: generate_ori_cor_texts.py  generate_predicted_texts.py  tokenize_texts.py
