[project]
name = "typo-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "errant>=3.0.0",
    "mecab-python3>=1.0.10",
    "ollama>=0.4.7",
    "pip>=25.0.1",
    "spacy[cuda12x,ja]>=3.8.4",
    "unidic-lite>=1.0.8",
]
